# easy-ros2arm

./: README.md
dofbot_lib/: setup.py
dofbot_lib/Arm_Lib/: Arm_Lib.py
dofbot_monocular_camera/dofbot_config/config/: dofbot.srdf  dofbot.urdf.xacro  ros2_controllers.yaml
dofbot_monocular_camera/dofbot_description/: CMakeLists.txt
dofbot_monocular_camera/dofbot_hardware_control/: setup.cfg
dofbot_monocular_camera/dofbot_hardware_control/dofbot_hardware_control/: dofbot_move.py
dofbot_monocular_camera/dofbot_moveit/: CMakeLists.txt  package.xml
dofbot_monocular_camera/dofbot_moveit/src/: attached_object.cpp  motion_planing.cpp
dofbot_monocular_camera/dofbot_msgs/: CMakeLists.txt
dofbot_monocular_carmer/dofbot_classification/: setup.py
dofbot_monocular_carmer/dofbot_classification/dofbot_classification/: picture_subscriber.py
dofbot_monocular_carmer/dofbot_config/: .setup_assistant  package.xml
dofbot_monocular_carmer/dofbot_config/config/: dofbot.ros2_control.xacro  dofbot.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
dofbot_monocular_carmer/dofbot_config/launch/: moveit_rviz.launch.py  setup_assistant.launch.py
dofbot_monocular_carmer/dofbot_description/meshes/: llink1.STL  rlink1.STL
dofbot_monocular_carmer/dofbot_description/urdf/: dofbot_description.urdf.xacro
dofbot_monocular_carmer/dofbot_hardware_control/: package.xml  setup.py
dofbot_monocular_carmer/dofbot_moveit/: package.xml
dofbot_monocular_carmer/dofbot_moveit/src/: random_move.cpp
ros1/dofbot_info/: CMakeLists.txt
ros1/dofbot_info/launch/: dofbot_info.launch.py
ros2/dofbot_info/: package.xml
ros2/dofbot_info/srv/: kinemarics.srv
src/Monocular carmer/dofbot_config/: .setup_assistant
src/dofbot_camera/: CMakeLists.txt  package.xml
src/dofbot_classificatioin/: package.xml  setup.cfg  setup.py
src/dofbot_classification/: package.xml  setup.cfg  setup.py
src/dofbot_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dofbot_config/config/: dofbot.ros2_control.xacro  dofbot.srdf  dofbot.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/dofbot_config/launch/: demo.launch.py  move_group.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/dofbot_config/scene/: shape.scene
src/dofbot_controller/: CMakeLists.txt  package.xml
src/dofbot_description/: package.xml
src/dofbot_description/launch/: view_dofbot.launch.py
src/dofbot_description/meshes/: llink3.STL  rlink2.STL
src/dofbot_description/rviz/: dofbot.rviz
src/dofbot_description/urdf/: dofbot.ros2_control.xacro  dofbot.urdf.xacro  dofbot_description.urdf.xacro
src/dofbot_face_follow/: package.xml  setup.cfg  setup.py
src/dofbot_gripper/: CMakeLists.txt  package.xml
src/dofbot_hardware/: CMakeLists.txt  dofbot_hardware.xml  package.xml
src/dofbot_hardware/include/dofbot_hardware/: dofbot_executor.hpp  dofbot_hardware_interface.hpp  dofbot_param_service_server.hpp  model.hpp  robot.hpp
src/dofbot_hardware/src/: dofbot_hardware_interface.cpp
src/dofbot_info/: CMakeLists.txt  package.xml
src/dofbot_info/launch/: dofbot_model_launch.py
src/dofbot_info/urdf/: dofbot_urdf.xacro
src/dofbot_moveit/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/dofbot_moveit/dofbot_moveit/: Arm_Lib.py  dofbot_move.py  random_move.py
src/dofbot_moveit/include/dofbot_moveit/: dofbot_kinemarics.h
src/dofbot_moveit/launch/: dofbot_moveit.launch.py
src/dofbot_moveit/rviz/: dofbot.rviz
src/dofbot_moveit/scripts/: dofbot_move.py
src/dofbot_moveit/src/: cartesian_route.cpp  multi_trajectory_motion.cpp  random_move.cpp  scene_planning.cpp
src/dofbot_moveit/urdf/: dofbot.urdf
src/dofbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dofbot_moveit_config/config/: dofbot.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/dofbot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/dofbot_msgs/: CMakeLists.txt  package.xml
src/dofbot_msgs/msg/: Imageinfo.msg  Images.msg
src/dofbot_sensors/: CMakeLists.txt  package.xml
src/dofbot_sensors/src/: publish_picture.cpp
src/dofbot_state_broadcaster/: CMakeLists.txt  package.xml
src/libdofbot/: CMakeLists.txt  package.xml
src/ros1/dofbot_info/: CMakeLists.txt  package.xml
src/ros1/dofbot_moveit/: CMakeLists.txt  package.xml
src/ros1_for_reference/dofbot_color_follow/: HSV_config.txt  (+7 more)
(+185 files in other folders)
